Clase Martes. Añadimos SCROLLVIEW en Productos Activity. Modificamos el xml poniendo como padre el scrollView pudiendo tener sólo un hijo directo. Añadimos textViews para mostrar abajo de todo los precios maximos, medio y mínimos. Añadí en strings variables para cambiar idioma de de los textos mostrados. Formatee los textos con los valores de forma distinta al profesor. Opción profesor queda comentada.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,4 +12,7 @@
     <string name="mensaje_boton_probar">Try your luck</string>
     <string name="mensaje_reiniciar">Restart</string>
     <string name="mensaje_titulo">CNTG APP\nGuess a number between 1 and 100</string>
+    <string name="precio_medio">Average price: %1$s</string>
+    <string name="precio_mas_barato">Cheapest price: %1$s</string>
+    <string name="precio_mas_caro">Most expensive price: %1$s</string>
 </resources>
